fix: removed a lot of general warnings